<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_info1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/lbl_info1"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/txt_info"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/txt_info1"
            android:inputType="text"
            android:textAlignment="textStart" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:focusable="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_info2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/lbl_info2"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/txt_info"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/txt_info2"
            android:inputType="text"
            android:textAlignment="textStart" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_info3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/lbl_info3"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/txt_info"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/txt_info3"
            android:inputType="text|textEmailAddress"
            android:textAlignment="textStart" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_info4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/lbl_info4"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_info4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/txt_info"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/txt_info4"
            android:inputType="text|textPhonetic"
            android:textAlignment="textStart" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_Down"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btn_down"
            android:rotation="180"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/_08336" />

        <ImageButton
            android:id="@+id/btn_Up"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btn_up"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/_08336" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swc_Info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/swc_info"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>